--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Marc Almeda # the main title
 tagline: Aspiring Cybersecurity Graduate # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Aspiring cybersecurity graduate trying out new thigns
+  Aspiring cybersecurity graduate trying out new things
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -99,7 +99,7 @@ theme_mode: dark # [light | dark]
 cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/cake.jpg"
+avatar: "assets/avatar.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
